Restore Windows support
Manually undid changes from commits 0796f78 and 20293f3.

(cherry picked from commit d8919e899d104452724abcf4d707154f7ad5d19b)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "platforms": [
       "android",
       "ios",
+      "windows",
       "browser"
     ]
   },
@@ -19,6 +20,7 @@
     "ecosystem:cordova",
     "cordova-android",
     "cordova-ios",
+    "cordova-windows",
     "cordova-browser"
   ],
   "scripts": {
